Intermediate commit of nearly working srec code

--- a/C/loader-C/Makefile
+++ b/C/loader-C/Makefile
@@ -53,7 +53,7 @@ open:
 	-open $(SRCS) 
 	
 run:	$(BIN)
-	upload-strapper  $(PRJ).bin
+	upload-strapper -n $(PRJ).bin
 	
 $(BIN): $(OBJS) 
 	$(LD)  $(OBJS) $(LDFLAGS) $(LIBS) -o $(BIN)
