Update upload-loader to share parse_srec.c with loader-C. Various minor tweaks to upload-loader.

--- a/upload-loader/Makefile
+++ b/upload-loader/Makefile
@@ -14,7 +14,7 @@ CC   = gcc
 
 # Compiler and linker flags
 
-CXXFLAGS =
+CXXFLAGS =  -I ../C/loader-C -I . -fpermissive
 LDFLAGS  =
 LIBS = -lstdc++
 
@@ -32,6 +32,7 @@ clean:
 
 zip:	clean all
 #	./$(BIN) > output.txt
+
 	zip -vr $(BIN).zip . -x $(BIN).zip
 
 # Grab-n-go: cleans, builds, runs output.
