Update seperation of parse_srec.c. Add checks of PC and SP if loader sector is written in uploader-loader.

--- a/upload-loader/Makefile
+++ b/upload-loader/Makefile
@@ -14,7 +14,7 @@ CC   = gcc
 
 # Compiler and linker flags
 
-CXXFLAGS =  -I ../C/loader-C -I . -fpermissive -DSREC_DEBUG
+CXXFLAGS =  -I ../C/loader-C -I . -fpermissive -DUPLOADER
 LDFLAGS  =
 LIBS = -lstdc++
 
