Cleaning and commenting of upload-loader. Fix boot from srec. Add timeout to sergetc. Lowercase s68.

--- a/C/multitasking/Makefile
+++ b/C/multitasking/Makefile
@@ -4,7 +4,7 @@
 
 # Get directory name, to use as output filename.
 PRJ = $(notdir $(CURDIR))
-BIN = $(PRJ).S68
+BIN = $(PRJ).s68
 
 LINK_SCRIPT = lksr_kern.ld
 
