Update Makefiles. Rename flash linker and startup code to rom.

--- a/C/Makefile_ram
+++ b/C/Makefile_ram
@@ -4,9 +4,10 @@
 
 # Get directory name, to use as output filename.
 PRJ = $(notdir $(CURDIR))
-BIN = $(PRJ).S68
+BIN = $(PRJ).s68
 
-LINK_SCRIPT = ../lksr_ram.ld
+CODE_LOC = rom
+LIBS =  -lcore -lhd44780 -ltime -lbeep -lgcc
 
 # Program names
 
@@ -27,17 +28,20 @@ CFLAGS  = -O -nostartfiles -nostdinc -nostdlib -m68000 -std=c99 -fno-builtin $(I
 LDFLAGS = -nostartfiles -nostdlib -A m68000 -T $(LINK_SCRIPT) $(LIBPATHS) --oformat srec
 ASFLAGS = -march=68000 -mcpu=68000
 
-LIBS = -lcore -lgcc
+LINK_SCRIPT = ../lksr_$(CODE_LOC).ld
+STARTUP_SRC = ../startup_$(CODE_LOC).s
 
 # List of source files
 
-SRCS=$(wildcard *.c)
-OBJS=$(SRCS:.c=.o) startup.o
-LSTS=$(SRCS:.c=.S)
+SRC_C=$(wildcard *.c)
+SRC_S=$(wildcard *.s)
+
+OBJS=$(SRC_C:.c=.o) $(SRC_S:.s=.o)
+LSTS=$(SRC_C:.c=.lst)
 
 # clear suffixes
 .SUFFIXES:
-.SUFFIXES: .c .o .S
+.SUFFIXES: .s .o .c .lst
 
 ####### TARGETS ########
 
@@ -57,12 +61,12 @@ open:
 	-open $(SRCS) 
 	
 run:	$(BIN)
-	upload $(PRJ).bin
+	upload-strapper $(PRJ).bin
 
 listing: $(LSTS)
 	
 $(BIN): $(OBJS) 
-	$(LD)  $(OBJS) $(LDFLAGS) $(LIBS) -o $(BIN)
+	$(LD)  $(OBJS) $(LIBS) $(LDFLAGS) -o $(BIN)
 	$(OBJCOPY) -I srec $(BIN) -O binary $(PRJ).bin
 	$(OBJDUMP) -D $(BIN) -m68000 > $(PRJ).L68
 	@echo
@@ -70,10 +74,15 @@ $(BIN): $(OBJS)
 	@stat -f %z $(PRJ).bin | sed 's/$$/ bytes/'
 	
 startup.o:
-	$(AS) $(ASFLAGS) ../startup_ram.S -o startup.o
+	$(AS) $(ASFLAGS) $(STARTUP_SRC) -o startup.o
+	
+listing: $(LSTS)
+
+.s.o:
+	$(AS) $(ASFLAGS) -o $@ $<
 	
 .c.o:
 	$(CC) $(CFLAGS) -c -o $@ $<
 	
-.c.S:
+.c.lst:
 	$(CC) $(CFLAGS) -c -S -o $@ $<
