Fix flash linker script for forcibly align data section.

--- a/C/multitasking/Makefile
+++ b/C/multitasking/Makefile
@@ -6,7 +6,7 @@
 PRJ = $(notdir $(CURDIR))
 BIN = $(PRJ).s68
 
-CODE_LOC = ram
+CODE_LOC = rom
 LDFLAGS = --defsym "__start_func=_kernel_start"
 
 # Program names
