Libify kernel code, and update dependant projects as relevant.

--- a/C/md5_multi_test/Makefile
+++ b/C/md5_multi_test/Makefile
@@ -28,7 +28,7 @@ CFLAGS  = -O3 -nostartfiles -nostdinc -nostdlib -m68000 -std=c99 -fno-builtin $(
 LDFLAGS += -nostartfiles -nostdlib -A m68000 -T $(LINK_SCRIPT) $(LIBPATHS) --oformat srec
 ASFLAGS = -march=68000 -mcpu=68000
 
-LIBS =  -lmd5 -lbeep  -lcore  -lhd44780 -lgcc
+LIBS =  -lmd5 -lbeep -lkernel -lcore  -lhd44780 -lgcc
 # -lbeep   -lprintf -lgcc -lhd44780  -lbeep  -lhd44780
 
 # List of source files
