Refactoring of loader.h to include srec_private.h, other various housekeeping bits.

--- a/upload-loader/Makefile
+++ b/upload-loader/Makefile
@@ -14,7 +14,7 @@ CC   = gcc
 
 # Compiler and linker flags
 
-CXXFLAGS =  -I ../C/loader-C -I . -fpermissive -DUPLOADER
+CXXFLAGS =  -I . -I ../C/loader-C -fpermissive -DUPLOADER
 LDFLAGS  =
 LIBS = -lstdc++
 
