Everything else IDK

--- a/C/wav_mt_demo/Makefile
+++ b/C/wav_mt_demo/Makefile
@@ -1,11 +1,11 @@
 # 68008 executable makefile stub
 
 # RAM or ROM
-CODE_LOC = RAM
+CODE_LOC = ROM
 
 USE_KERNEL = 1
 
 # Libraries
-LIBS = -lmd5 -lhd44780
+LIBS = -lbeep -lhd44780
 
 include ../Makefile_exe.mk
