--- a/C/Makefile_lib
+++ b/C/Makefile_lib
@@ -17,7 +17,8 @@ AS   = m68k-elf-as
 
 INCPATHS= -I . -I ../include -I /Users/zigzagjoe/Documents/68008/deploy/lib/gcc/m68k-elf/4.2.4/include
 
-CFLAGS  = -fno-pic -O3 -nostartfiles -nostdinc -nostdlib -m68000 -std=c99 -fno-builtin $(INCPATHS)
+# -fdata-sections -ffunction-sections
+CFLAGS  = -fno-pic -O3 -nostartfiles -nostdinc -nostdlib -m68000 -std=c99 -fno-builtin $(INCPATHS) 
 ASFLAGS = -march=68000 -mcpu=68000
 ARFLAGS = -ar rcs $(LIB)
 
