Promote i2c to library. Seperate MPU functions into own header/source file.

--- a/C/i2c_testbed/Makefile
+++ b/C/i2c_testbed/Makefile
@@ -9,6 +9,6 @@ OPTIMIZE = 3
 #NO_CORELIB = true
 
 # Libraries
-LIBS = -ltime -lhd44780
+LIBS = -ltime -lhd44780 -li2c
 
 include ../Makefile_exe.mk
