Make calibration be done as supervisor level task.

--- a/C/robot_mt/Makefile
+++ b/C/robot_mt/Makefile
@@ -1,11 +1,11 @@
 # 68008 executable makefile stub
 
 # RAM or ROM
-CODE_LOC = RAM
+CODE_LOC = ROM
 
 USE_KERNEL = 1
 
 # Libraries
-LIBS = -lbeep -lhd44780
+LIBS = -lbeep -lhd44780 -li2c
 
 include ../Makefile_exe.mk
